[tool.poetry]
name = "ids-2022"
version = "1.0.0"
description = "Example in Jax"
authors = ["Ruben van der Zwaan"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jax = "^0.2.20"
jaxlib = "^0.1.71"
matplotlib = "^3.4.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
